Remove StringUtils, improve ServerUtilsExecutor